agrega el header, imagenes de equipo

--- a/Equipo.html
+++ b/Equipo.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo De Trabajo</title>
+    <style>
+        .imagen{
+            background-image: url(img/david.jpeg);
+            background-size: cover;
+            background-position-y: center;
+            width: 300px;
+            height: 300px;
+            border-radius: 10px;
+            box-shadow: #000 4px 9px 20px -6px;
+        }
+    </style>
 </head>
 <body>
     <h1>Equipo</h1>
-    <img src="img/david.jpg">
+    <div class="imagen"></div>
     <h2>Enrique Burgos</h2>
     <p>descrpicion</p>
 </body>
