--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container-logo">
+            <ion-icon class="logo" name="leaf-outline"></ion-icon>
+            <h1>Huerto Ecologico</h1>
+        </div>
+        <nav>
+            <a href="#">Equipo</a>
+            <a href="#">Sobre Nosotros</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </header>
     <div class="centrar">
-        <h1>Huerto Ecologico</h1>
+        
         <img src="img/porta.jpg" width="300" height="400">
 
         <div style="text-align: center;">
