Aca se actualizo inofrmacion del equipo, header y evidencias

--- a/Equipo.html
+++ b/Equipo.html
@@ -16,10 +16,23 @@
         }
     </style>
 </head>
-<body>
-    <h1>Equipo</h1>
+<body><center>
+    <h1>Equipo De Trabajo</h1>
     <div class="imagen"></div>
     <h2>Enrique Burgos</h2>
-    <p>descrpicion</p>
+    <p>Enrique David Burgos Ruiz, Ingeniero En Desarrollo De Software, 23 años, estudiante de la Fundación Escuela Tecnológica (FET)/p>
+    
+    <div class="imagen"></div>
+    <h2>Santiago Alarcon</h2>
+    <p>Santiago Alarcon Gutiérrez, Ingeniero En Desarrollo De Software, 17 años, estudiante de la Fundación Escuela Tecnológica (FET)</p>
+    
+    <div class="imagen"></div>
+    <h2>Sergio Castro</h2>
+    <p>Sergio Andrés Castro Velázquez, Ingeniero En Desarrollo De Software, 17 años, estudiante de la Fundación Escuela Tecnológica (FET)</p>
+    <h1>Equipo</h1>
+    <div class="imagen"></div>
+    <h2>Juan C. Restrepo</h2>
+    <p>Juan Carlos Restrepo Penagos, Ingeniero En Desarrollo De Software, 17 años, estudiante de la Fundación Escuela Tecnológica (FET)</p>
+</center>
 </body>
 </html>
