--- a/index.html
+++ b/index.html
@@ -13,29 +13,31 @@
             <h1>Huerto Ecologico</h1>
         </div>
         <nav>
-            <a href="#">Equipo</a>
+            <a href="Equipo.html" target="_blank">Equipo</a>
             <a href="#">Sobre Nosotros</a>
             <a href="#">Contacto</a>
         </nav>
     </header>
     <div class="centrar">
-        
+    <br>
         <img src="img/porta.jpg" width="300" height="400">
 
         <div style="text-align: center;">
             <hr>
             <h2 id="titulo">Introdución</h2>
+            <br>
         </div>
         <div style="text-align:justify;">
             <p>En un mundo donde la sostenibilidad es esencial, nuestro proyecto se presenta como una respuesta
                 innovadora a la necesidad de integrar prácticas ecológicas en la agricultura.Como estudiantes de la
-                Universidad FET, hemos asumido el desafío de crear 2 huertos ecológicos utilizando materiales
+                Universidad FET, hemos asumido el desafío de crear un Huerto ecológico utilizando materiales
                 reciclables. Esta estructura fue diseñada para el cultivo de plantas aromáticas como hierbabuena, menta,
                 albahaca, tomillo,entre otras.</p>
         </div>
         <div>
             <hr>
             <h2 id="titulo">Descripción</h2>
+            <br>
             <p style="text-align: justify;">El proyecto "Huerto Ecológico: Innovación Sostenible con Materiales
                 Reciclables" es una iniciativa
                 desarrollada por estudiantes de la Universidad FET, con el objetivo de establecer ocho huertos
@@ -46,6 +48,7 @@
             <hr>
             <div>
                 <h2 id="titulo">Objetivos Del Proyecto</h2>
+                <br>
                 <p style="text-align: justify;">Fomentar la sostenibilidad en el campus universitario
                     Crear un entorno verde y autosuficiente que promueva prácticas ecológicas y el uso de materiales
                     reciclables dentro de la universidad.
@@ -59,6 +62,7 @@
             </div>
             <div>
                 <h2 id="titulo">Objetivos especificos</h2>
+                <br>
                 <p style="text-align: justify;">El proyecto "Huerto Ecológico: Innovación Sostenible con Materiales
                     Reciclables" es una iniciativa
                     desarrollada por estudiantes de la Universidad FET, con el objetivo de establecer ocho huertos
@@ -69,22 +73,27 @@
                     prácticas agrícolas responsables en la vida diaria de la comunidad.</p>
                 <hr>
                 <h2 id="titulo">Evidencias</h2>
-                <h3 id="titulo">Primera evidencia</h3>
+                <br>
                 <img src="img/ev1.jpg" height="300">
                 <p>Se realizaron las medidas para los cortes de las guaduas ya de manera física y presencial,
                     el compañero Enrique David Burgos fue uno de los encargados en realizar estas medidas,
                     utilizando como método de medida la cinta métrica, contando con el apoyo de Santiago A
                     larcón para tomar las evidencias del trabajo realizado.</p>
-                <h3 id="titulo">Segunda Evidencia</h3>
+                <br>
                 <img src="img/ev2.jpg" height="300">
                 <p>Se realizaron los cortes con las medidas exactas en las guaduas, los compañeros
                     Enrique David Burgos y Juan Carlos Restrepo, fueron los designados para esta labor,
                     utilizando como herramientas nuevamente la cinta métrica para las medidas y el serrucho
                     como herramienta de corte, con el apoyo del compañero Sergio Castro y Luis Medina para
                     realizar la toma de evidencias de la labor realizada ese día.</p>
-                <hr>
-                <img src="img/ev3.jpg" height="300">
-
+                <br>
+                <img src="img/ev3.jpg" height="300" width="400">
+                <br>
+                <img src="img/WhatsApp Image 2024-11-19 at 4.06.05 PM.jpeg" height="300" width="400">
+                <br>
+                <img src="img/WhatsApp Image 2024-11-19 at 4.06.06 PM.jpeg" height="300">
+                <br>
+                <img src="img/WhatsApp Image 2024-11-19 at 4.06.07 PM.jpeg" height="300">
             </div>
         </div>
     </div>
@@ -101,12 +110,12 @@
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="mailto:encuentraelcaminokb@gmail.com?Subject=Aquí%20el%20asunto%20del%20mail" class="icon">
                     <ion-icon name="mail-outline"></ion-icon>
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="https://www.facebook.com/share/VZ31M5JCcGGGEWiV/?mibextid=LQQJ4d" target="_blank" class="icon">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
             </li>
